# lazy_milktea

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json
spec/: spec.md
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  parser.rs  types.rs
src-tauri/src/index/: builder.rs  mod.rs  sqlite.rs  streaming.rs
src-tauri/src/parser/: device.rs  entrypoint.rs  logcat.rs  mod.rs
src-tauri/src/query/: cursor.rs  executor.rs  filter.rs  mod.rs
src-tauri/src/time/: anchor.rs  conversion.rs  mod.rs
src/components/: AppShell.tsx  LogcatView.module.css  LogcatView.tsx
src/components/logcat/: LogcatViewV2.module.css  LogcatViewV2.tsx  index.ts
src/components/logcat/hooks/: useLogHighlight.ts  useLogcatQuery.ts
src/styles/: theme.css
