[package]
name = "lazy_milktea"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lazy_milktea_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
zip = "5.1.1"
regex = "1"
dirs = "6"
sha1 = "0.10"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
once_cell = "1"
